# BibleMarker

./: .gitignore  AGENTS.md  APP_PLATFORM_COMPARISON.md  BETA_TESTING.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  ICON_GENERATION.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  TEST_PLAN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/agents/: code-improver.md  security-reviewer.md
.cursor/plans/: bible_study_app_roadmap_9b6b0525.plan.md
.cursor/rules/: bible-api.mdc  buttons.mdc  database-patterns.mdc  dev-server.mdc  fix-gh-ci-error.mdc  forms.mdc  local-builds.mdc  project-overview.mdc  react-components.mdc  release-workflow.mdc  task-completion.mdc  zustand-stores.mdc
.github/: dependabot.yml
.github/docker/: Dockerfile.full
.github/workflows/: build-ci-images.yml  ci-docs-skip.yml  ci.yml  dependency-review.yml  promote-release.yml  regenerate-flatpak-sources.yml  release-tag.yml  release.yml  security.yml  testflight.yml
docker/ci-images/: Dockerfile.full  Dockerfile.node  README.md
docs/: CHAPTER_MAP_FEATURE.md  COLOR_PALETTE.md  CROSS_PLATFORM_STRATEGY.md  GETBIBLE_SELF_HOSTING.md  ICLOUD_SYNC.md  MAC_APP_GUIDE.md  STORE_DATA_SAFETY.md  STRUCTURE_FEATURE.md  THEME_REVIEW.md  WINDOWS_CODE_SIGNING.md
docs/app-store-screenshots/: README.md
docs/archive/: NATIVE_ONLY_APP_STRATEGY.md  WEB_CODE_SAFETY.md
docs/plans/: TOS_bible.api.md  apibible_terms_analysis.md  (+1 more)
flatpak/: .gitignore  README.md  app.biblemarker.BibleMarker.yml  cargo-config.toml
public/: strongs-greek.json  strongs-hebrew.json
scripts/: create-latest-json.js  download-modules.js  gen-bible-places.mjs  generate-icons.js  patch-android-signing.py  release.sh  sign-macos.sh  sync-version.js  tauri-build.sh  tauri-dev.sh  tauri.sh
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  embedded.provisionprofile  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: desktop.json  main.json
src-tauri/icons/: icon.icns
src-tauri/linux/: app.biblemarker.BibleMarker.desktop  app.biblemarker.BibleMarker.metainfo.xml
src-tauri/src/: db_maintenance.rs  download.rs  flatpak.rs  icloud.rs  lib.rs  main.rs  mobile.rs  signed_download.rs  sync_client.rs
src/lib/: db.ts  (+67 more)
wiki/: Home.md
worker/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
(+274 files in other folders)
