[package]
name = "biblemarker"
version = "0.3.0"
description = "A focused Bible study app with rich annotation tools"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "biblemarker"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = { version = "2.0", features = [] }
tauri-plugin-dialog = { version = "2.0", features = [] }
tauri-plugin-fs = { version = "2.0", features = [] }
serde_json = "1.0"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
