[package]
name = "biblemarker"
version = "0.8.10"
description = "A focused Bible study app with rich annotation tools"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "biblemarker"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = { version = "2.0", features = [] }
tauri-plugin-fs = { version = "2.0", features = [] }
tauri-plugin-sql = { version = "2.2", features = ["sqlite"] }
tauri-plugin-opener = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }

# macOS/iOS iCloud support
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSFileManager", "NSString", "NSObject"] }

# Desktop-only: updater and process (excludes iOS)
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-updater = { version = "2", features = [] }
tauri-plugin-process = { version = "2", features = [] }

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
